<resources>
    <string name="app_name">TodosApp</string>
    <string name="categories">Categories</string>
    <string name="work">Work</string>
    <string name="_2_items">2 items</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_add">ADD</string>
    <string name="add_category">Add category</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="category_already_exists">Category already exists</string>
    <string name="text_press_again_to_exit">Press again to exit</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="item_1">item 1</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="description_optional">Description (optional)</string>
    <string name="title">Title</string>
    <string name="completed">Completed</string>
    <string name="text_enter_note_title">Enter note title</string>
    <string name="text_note_deleted_successfully">Note deleted successfully</string>
    <string name="unable_to_delete_noe">Unable to delete note. Try Again.</string>
    <string name="text_note_updated_successfully">Note updated successfully</string>
    <string name="text_unable_to_update_note">Unable to update note. Try Again.</string>
    <string name="text_note_added_successfully">Note added successfully</string>
    <string name="text_unable_to_add_note">Unable to add note. Try Again.</string>
    <string name="text_in_order_to_continue_we_need_this_permission">In order to continue we need this permission</string>

</resources>
