<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/action_bar_custom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="15dp"
            android:src="@drawable/ic_clear" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/clear_button"
            android:paddingStart="@dimen/common_padding"
            android:text="@string/categories"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/save_button"
            android:background="@null"
            android:text="@string/delete"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_bar_custom">

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/selected_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@drawable/solid_grey_background"
                android:minHeight="200dp" />

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selected_image"
                android:background="@null"
                android:text="@string/add_photo"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_image_button"
                android:layout_marginEnd="@dimen/common_padding"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_marginStart="@dimen/common_padding"
                android:layout_marginTop="@dimen/common_padding"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_title"
                android:layout_marginEnd="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:hint="@string/description_optional" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/add_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_description"
                android:layout_marginEnd="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:layout_marginTop="@dimen/common_padding"
                android:text="@string/completed"
                android:textSize="16sp"
                android:layout_marginBottom="32dp"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
