<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="86dp"
    android:orientation="horizontal"
    android:background="@drawable/adapter_item_background"
    android:paddingTop="@dimen/common_padding"
    android:paddingStart="@dimen/common_padding"
    android:paddingEnd="@dimen/common_padding"
    android:paddingBottom="24dp">

    <com.example.todosapp.util.RoundedImageView
        android:id="@+id/image_view"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_padding"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/status_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/status_pending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
